packages/flare-core-apple-sdk/Sources/CFlareImCoreSdkFFI/include/flare_im_core_sdk_ffi.h

/**
 * 句柄类型
 */
typedef uint64_t FlareHandle;
/**
 * 结果回调
 */
typedef void (*FlareResultCallback)(void *context,
                                    const struct FlareError *error,
                                    struct FlareString result_json);
/**
 * Universal contract invoke: `api_id` + JSON params (canonical ids from `contract/apis.json`).
 */
int32_t flare_sdk_invoke_json(FlareHandle handle,
                              const char *api_id,
                              const char *params_json,
                              void *context,
                              FlareResultCallback callback);
int32_t flare_sdk_state(FlareHandle handle);
FlareHandle flare_sdk_create(void);
void flare_sdk_release(FlareHandle handle);
/**
 * FFI 全局硬重置：取消全部事件订阅并释放全部 SDK 句柄。
 *
 * 用途：Flutter/iOS 热重启后，旧 isolate 的回调地址可能失效。
 * 在新 isolate 初始化前调用可避免旧后台任务继续回调导致崩溃。
 */
void flare_sdk_hard_reset(void);
bool flare_sdk_is_connected(FlareHandle handle);
bool flare_sdk_session_active(FlareHandle handle);