packages/flare-core-flutter-sdk/lib/src/bridge/ffi_native_bridge.dart


  if (error != nullptr) {
    final message = decodeFlareString(error.ref.message);
    final detailsJson = decodeFlareString(error.ref.detailsJson);
    final code = error.ref.code;
    _NativeBindings.instance?.errorHeapFree(error);
    call.completer.completeError(FlareSdkException(
      code: 'native_error_$code',
      message: message.isEmpty ? 'Native operation failed.' : message,
      operation: call.operation,
      details: parseJsonLenient(detailsJson),
    ));
    return;
  }

  final raw = decodeFlareString(result);
  _NativeBindings.instance?.stringFree(result);
  call.completer.complete(parseJsonLenient(raw));
}

void _handleEventCallback(
  Pointer<Void> context,
  int eventType,
  NativeFlareString eventJson,
) {
  final raw = decodeFlareString(eventJson);
  _NativeBindings.instance?.stringFree(eventJson);
  _eventSinks[context.address]?.call(eventType, parseJsonLenient(raw));
}

void _handleEventBatchCallback(
  Pointer<Void> context,
  int eventCount,
  NativeFlareString eventsJson,
) {
  final raw = decodeFlareString(eventsJson);
  _NativeBindings.instance?.stringFree(eventsJson);
  final decoded = parseJsonLenient(raw);
  final sink = _eventSinks[context.address];
  if (sink == null || decoded is! Map) {
    return;
  }
  final events = decoded['events'];
  if (events is! Iterable) {
    return;
  }
  for (final item in events.take(eventCount)) {
    if (item is! Map) {
      continue;
    }
    final eventType = int.tryParse(
      '${item['eventType'] ?? ''}',
    );
    if (eventType == null) {
      continue;
    }
    sink(eventType, item['payload']);
  }
}

Object? parseJsonLenient(String raw) {
  if (raw.isEmpty) {
    return null;
  }
  try {
    return wireDecodeResponse(jsonDecode(raw));
  } on FormatException {
    return raw;
  }
}

Map<String, Object?> asMap(Object? value) {
  if (value == null) {
    return const <String, Object?>{};
  }
  if (value is Map<String, Object?>) {
    return value;
  }
  if (value is Map) {
    return value
        .map((key, entry) => MapEntry(key.toString(), entry as Object?));
  }
  throw ArgumentError.value(
      value, 'request', 'Expected a JSON object request.');
}

Map<String, Object?> asResponseMap(Object? value) {
  if (value == null) {
    return const <String, Object?>{};
  }
  if (value is Map<String, Object?>) {
    return value;
  }
  if (value is Map) {
    return value
        .map((key, entry) => MapEntry(key.toString(), entry as Object?));
  }
  if (value is List) {
    return {'items': value};
  }
  return {'value': value};
}

Object? messageForTypedSend(Object? request) {
  final map = asMap(request);
  final message = map['message'];
  if (message is Map<String, Object?>) {
    return message;
  }
  if (message is Map) {
    return message
        .map((key, entry) => MapEntry(key.toString(), entry as Object?));
  }
  return map;
}

String stringField(Object? request, String key) {
  final map = asMap(request);
  final value = map[key];
  if (value is String && value.isNotEmpty) {
    return value;
  }
  throw ArgumentError('Missing required string field `$key`.');
}

int intField(
  Map<String, Object?> request,
  String key, [
  int defaultValue = -1,
]) {
  final value = request[key];
  if (value == null && defaultValue >= 0) {
    return defaultValue;
  }
  if (value is num) {
    return value.toInt();
  }
  throw ArgumentError('Missing required integer field `$key`.');
}

bool boolField(Map<String, Object?> request, String key) {
  final value = request[key];
  if (value is bool) {
    return value;
  }
  throw ArgumentError('Missing required boolean field `$key`.');
}

bool boolFieldWithDefault(
  Map<String, Object?> request,
  bool defaultValue,
  String key,
) {
  final value = request[key];
  if (value == null) {
    return defaultValue;
  }
  if (value is bool) {
    return value;
  }
  throw ArgumentError('Invalid boolean field `$key`.');
}

String _optionalJsonString(
  Map<String, Object?> request,
  String key,
) {
  final value = request[key];
  if (value == null) {
    return 'null';
  }
  if (value is String) {
    final text = value.trim();
    return text.isEmpty ? 'null' : text;
  }
  return jsonEncode(wireEncodeRequest(value));
}

List<Object?> listField(Object? request, String key) {
  final map = asMap(request);
  final value = map[key];
  if (value is List) {
    return value;
  }
  throw ArgumentError('Missing required list field `$key`.');
}

Uint8List bytesField(Object? request, String key) {
  final map = asMap(request);
  final value = map[key];
  if (value is Uint8List) {
    return value;
  }
  if (value is List<int>) {
    return Uint8List.fromList(value);
  }
  throw ArgumentError('Missing required bytes field `$key`.');
}

int _reserveContextId() => _nextContextId++;

ConnectionState connectionStateFromFfiStateCode(int code) {
  return switch (code) {
    0 => ConnectionState.disconnected,
    1 => ConnectionState.connecting,
    2 => ConnectionState.connected,
    3 => ConnectionState.ready,
    4 => ConnectionState.reconnecting,
    _ => throw FlareSdkException(
        code: 'invalidParameter',
        message: 'invalid connection state code: $code',
        operation: 'connection.get_state',
        details: {'field': 'stateCode'},
      ),
  };
}

typedef _Async0Fn = int Function(
  int,
  Pointer<Void>,
  Pointer<NativeFunction<_NativeResultCallback>>,
);
typedef _AsyncStringFn = int Function(
  int,
  Pointer<Utf8>,
  Pointer<Void>,
  Pointer<NativeFunction<_NativeResultCallback>>,
);
typedef _Async2StringFn = int Function(
  int,
  Pointer<Utf8>,
  Pointer<Utf8>,
  Pointer<Void>,
  Pointer<NativeFunction<_NativeResultCallback>>,
);
typedef _AsyncDispatchFn = int Function(
  int,
  Pointer<Utf8>,
  Pointer<Utf8>,
  Pointer<Void>,
  Pointer<NativeFunction<_NativeResultCallback>>,
);
typedef _AsyncStringBoolFn = int Function(
  int,
  Pointer<Utf8>,
  bool,
  Pointer<Void>,
  Pointer<NativeFunction<_NativeResultCallback>>,
);

final class _NativeBindings {
  _NativeBindings(this.library) {
    instance = this;
  }

  static _NativeBindings? instance;

  final DynamicLibrary library;

  late final int Function() sdkCreate = library
      .lookupFunction<Uint64 Function(), int Function()>('flare_sdk_create');
  late final void Function(int) sdkRelease =
      library.lookupFunction<Void Function(Uint64), void Function(int)>(
          'flare_sdk_release');
  late final void Function() sdkHardReset = library
      .lookupFunction<Void Function(), void Function()>('flare_sdk_hard_reset');
  late final int Function(int) sdkState =
      library.lookupFunction<Int32 Function(Uint64), int Function(int)>(
          'flare_sdk_state');
  late final bool Function(int) sdkIsConnected =
      library.lookupFunction<Bool Function(Uint64), bool Function(int)>(
          'flare_sdk_is_connected');
  late final bool Function(int) sdkSessionActive =
      library.lookupFunction<Bool Function(Uint64), bool Function(int)>(
          'flare_sdk_session_active');
  late final _AsyncDispatchFn sdkInvokeJson = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncDispatchFn>('flare_sdk_invoke_json');
